--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-
   <section id="title">
     <div class="container-fluid">
 
@@ -36,7 +35,7 @@
               <a class="nav-link" href="">contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">pricing</a>
+              <a class="nav-link" href="#pricing">pricing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">download</a>
@@ -47,15 +46,15 @@
 
       <!-- Title -->
       <div class="container">
-        <div class="row">
-          <div class="col-sm-6 ps-0">
+        <div class="row row-cols-md-6 row-cols-sm-12">
+          <div class="col-lg-6 col-md-12 ps-0 title-first-col">
             <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg downloadbtn"><i class="fab fa-apple"></i>Download</button>
             <button type="button" class="btn btn-light btn-lg downloadbtn"><i
                 class="fab fa-google-play"></i>Download</button>
           </div>
-          <div class="col-sm-6 text-center">
-            <img class="title-img align-self-center" src="images/iphone6.png" alt="iphone-mockup">
+          <div class="col-lg-4 col-md-12 col-img titile-second-col">
+              <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
           </div>
         </div>
       </div>
@@ -64,111 +63,143 @@
 
 
   <!-- Features -->
-
   <section id="features">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <i class="far fa-check-circle fa-5x features-img"></i>
         <h3>Easy to use.</h3>
         <p class="ft-p">So easy to use, even your dog could do it.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <i class="fas fa-bullseye fa-5x features-img"></i>
         <h3>Elite Clientele</h3>
         <p class="ft-p">We have all the dogs, the greatest dogs.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <i class="fas fa-heart fa-5x features-img"></i>
         <h3>Guaranteed to work.</h3>
         <p class="ft-p">Find the love of your dog's life or your money back.</p>
       </div>
     </div>
-
-
-
-
-
-
   </section>
 
 
   <!-- Testimonials -->
 
   <section id="testimonials">
-
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+    <div id="testimonials-carousel" class="carousel  slide" data-bs-ride="carousel" data-bs-interval="2000" data-bs-pause="hover">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonials-img" src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2>My dog used to be so lonely, but with TinDog's help, they've found the love of their life.</h2>
+          <img class="testimonials-img" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#testimonials-carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </button>
+      </div>
+    </div>
   </section>
 
-
   <!-- Press -->
-
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
-
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
   </section>
 
 
   <!-- Pricing -->
-
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="container price">
+      <div class="row row-cols-lg-3">
+        <!-- 1st card -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Chihuahua</h3>
+            </div>
+            <div class="card-body">
+              <h2>Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App Usage</p>
+              <p class="hidden-paragraph">hidden</p>
+              <button type="button" class=" w-100 btn btn-light btn-outline-dark btn-lg price-btn">Sign Up</button>
+            </div>
+          </div>
+        </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Labrador</h3>
+            </div>
+            <div class="card-body">
+              <h2>$49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <p class="hidden-paragraph">hidden</p>
+              <button type="button" class=" w-100 btn btn-outline-dark btn-lg price-btn">Sign Up</button>
+            </div>
+          </div>
+        </div>
 
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+        <div class="col-sm-12 col-lg-4">
+          <div class="card ">
+            <div class="card-header">
+              <h3 class="card-tile">Mastiff</h3>
+            </div>
+            <div class="card-body">
+              
+              <h2>$99 / mo</h2>
+              <p>Pirority Listing</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button type="button" class=" w-100 btn  btn-outline-dark btn-lg price-btn">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 
   <!-- Call to Action -->
-
   <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <div class="container-fluid">
+      <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-light btn-lg downloadbtn"><i
+        class="fab fa-google-play"></i>Download
+      </button>
+      <button type="button" class="btn btn-dark btn-lg downloadbtn"><i class="fab fa-apple"></i>Download
+      </button>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
+    <i class="fab fa-twitter fa-3x p-2"></i>
+    <i class="fab fa-facebook-f fa-3x p-2"></i>
+    <i class="fab fa-instagram fa-3x p-2"></i>
+    <i class="fas fa-envelope fa-3x p-2"></i>
+    <p>© Copyright 2021 TinDog</p>
 
   </footer>
 
@@ -181,8 +212,6 @@
 
   <!-- awesome icon -->
   <script src="https://kit.fontawesome.com/822b323ce1.js" crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
